# cognicart

./: .gitignore  README.md  docker-compose.yml
backend/: .env.docker  .env.local  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 64a50206c344_added_created_at_column_in_product_table.py  7ee91f0419a0_add_foreign_key_from_sales_to_products.py  90362d3da5cc_add_product_table.py  96df58bfcb14_add_name_to_user_model.py  b666689cbcdf_create_initial_tables.py  b6b34b3570cf_add_user_model.py
backend/app/: exceptions.py  main.py
backend/app/ai/: embedding.py
backend/app/ai/agent_logic/: sale_agent.py  tools.py
backend/app/ai/llm/: gemini_client.py
backend/app/ai/vector_store/: chroma_client.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  products.py  sales.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  models.py  redis_client.py  session.py
backend/app/schemas/: agent.py  common.py  product.py  sale.py  user.py
backend/app/services/: analytics_service.py  product_service.py  sales_service.py  user_service.py
backend/scripts/: test_agent.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: ChatLauncher.jsx  ConfirmationDialog.js  EditProductForm.js  EditSaleForm.js  Footer.js  Header.js  Navbar.js  ProductForm.js  ProductTable.js  SalesForm.js  SalesTable.js  Sidebar.js  SidebarNav.js  StatsCard.js  ai-chat-interface.jsx  app-sidebar.jsx  chart-area-interactive.jsx  dashboard-page-layout.jsx  data-table.jsx  nav-main.jsx  nav-user.jsx  product-form.jsx  providers.jsx  sale-form.jsx  section-cards.jsx  site-header.jsx  theme-provider.jsx  top-products-card.jsx
frontend/src/context/: AuthContext.js
frontend/src/hooks/: useCrudManager.js
frontend/src/lib/: api.js  data.js  products.js  sale.js
(+16 files in other folders)
