[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI-Powered E-commerce Analytics Engine"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
redis = "^5.0.4"
alembic = "^1.16.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.5.0"
bcrypt = "3.2.2"
authlib = "^1.6.3"
itsdangerous = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"