[project]
name = "backend"
version = "0.1.0"
description = "CogniCart Backend"
authors = [
    { name = "Satyam Sharma", email = "satyam17102003@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi[all]>=0.118.0,<0.119.0",
    "uvicorn[standard]>=0.37.0,<0.38.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "redis>=6.4.0,<7.0.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "requests>=2.32.5,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "authlib>=1.6.5,<2.0.0",
    "greenlet>=3.2.4,<4.0.0",
    "argon2-cffi>=25.1.0,<26.0.0",
    "sentence-transformers>=5.1.1,<6.0.0",
    "chromadb>=1.2.0,<2.0.0",
    "anyio>=4.11.0,<5.0.0",
    "langchain-core==0.2.22",
    "langchain==0.2.5",
    "langchain-community==0.2.4",
    "langchain-agents==0.2.19",
    "langchain-google-genai==1.0.4"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
